force-app/main/default/objects/Pipeline__c/Pipeline__c.object-meta.xml
<CustomObject>
    <label>Pipeline</label>
    <pluralLabel>Pipelines</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Pipeline</description>
</CustomObject>