force-app/main/default/objects/Pipeline__c/fields/Avg_Duration__c.field-meta.xml
<CustomField>
    <fullName>Avg_Duration__c</fullName>
    <label>Avg Duration</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>