force-app/main/default/objects/Pipeline__c/fields/Total_Stages__c.field-meta.xml
<CustomField>
    <fullName>Total_Stages__c</fullName>
    <label>Total Stages</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>