force-app/main/default/objects/Pipeline__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Standard</fullName><default>false</default><label>Standard</label></value>
            <value><fullName>Canary</fullName><default>false</default><label>Canary</label></value>
            <value><fullName>BlueGreen</fullName><default>false</default><label>BlueGreen</label></value>
            <value><fullName>Rolling</fullName><default>false</default><label>Rolling</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>